# markdown.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  test.md
.github/workflows/: rust.yml
benches/: README  lib.rs  to_html.rs
src/: html.rs  lib.rs  main.rs  normalizer.rs  parser.rs  plan 2-24-2022
src/generator/: mod.rs
src/markdown_generator/: mod.rs
src/parser/: block.rs  mod.rs  span.rs
src/parser/block/: atx_header.rs  blockquote.rs  code_block.rs  hr.rs  html_block.rs  link_reference.rs  list.rs  mod.rs  ordered_list.rs  setext_header.rs  unordered_list.rs
src/parser/span/: br.rs  code.rs  emphasis.rs  image.rs  link.rs  mod.rs  reference_link.rs  strong.rs
tests/: lib.rs
tests/fixtures/: README  mod.rs
tests/fixtures/docs-maruku-unittest/: lists7.html  lists7b.html
tests/fixtures/files/: advanced_inline_html.html  advanced_inline_html.text  brackets_in_links.html  brackets_in_links.text  entities.html  entities.text  escaping.html  escaping.text  hex_entities.html  links.html  links.text  list1.html  list1.text  list2.html  list3.html  lists.html  lists8.html  lists_ol.html  lists_ol.text  numbers.html  numbers.text  paragraphs.html  simple_inline_html.html  simple_inline_html.text  utf8.html  utf8.text  wrapping.html
tests/fixtures/markdown-rs/: ref_link.html  ref_link.md  ref_link_no_ref.html  ref_link_no_ref.md  ref_links.html  ref_links.md  ref_links_staggered.html  ref_links_staggered.md
