[package]

name = "markdown"
version = "0.2.0"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "Native Rust library for parsing Markdown and (outputting HTML)"
repository = "https://github.com/johannhof/markdown.rs"
readme = "README.md"
keywords = ["markdown", "md", "html", "parser"]
license = "MIT OR Apache-2.0"

exclude = [
    "test.md"
]

[[bin]]
name = "markdown"
doc = false

[features]
default = []
unstable = []

[dependencies]
clippy = {version = "0", optional = true}
lazy_static = "0"
pipeline = "0"
regex = "0"

[dev-dependencies]
difference = "0.4"

