[package]
name = "markly"
version = "0.3.0"
authors = ["Brad Alfirevic <brad@genbyte.dev>", "Johann Hofmann <mail@johann-hofmann.com>"]
description = "Native Rust library for parsing Markdown and (outputting HTML)"
repository = "https://github.com/genuinebyte/markly.rs"
readme = "README.md"
keywords = ["markdown", "md", "html", "parser"]
license = "MIT OR Apache-2.0"

exclude = [
    "test.md"
]

[[bin]]
name = "markly"
doc = false

[features]
default = []
unstable = []

[dependencies]
clippy = {version = "0", optional = true}
lazy_static = "1.4"
pipeline = "0.5"
regex = "0.2"

[dev-dependencies]
difference = "0.4"

